@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  [Enhancements]
+  - Added `callback` attribute to override logging method.
 
 v0.6.0    2023-12-05 11:12:59+00:00 Europe/London
   [Enhancements]
